# Python4DataScience

Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex08/: Loading.py
Python-0-Starting/ex09/: pyproject.toml
Python-0-Starting/ex09/ft_package/: __init__.py
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py
Python-1-Array/ex02/: load_image.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/: load_image.py  rotate.py
Python-1-Array/ex05/: load_image.py  pimp_image.py  tester.py
Python-2-DataTable/ex01/: aff_life.py
Python-2-DataTable/ex02/: aff_pop.py
Python-2-DataTable/ex03/: load_csv.py  projection_life.py
py0/ex00/: Hello.py
py0/ex01/: format_ft_time.py
py0/ex02/: find_ft_type.py
py0/ex03/: NULL_not_found.py
py0/ex04/: whatis.py
py0/ex05/: building.py
py0/ex06/: filterstring.py  ft_filter.py
py0/ex07/: sos.py
py0/ex08/: Loading.py  tester.py
py0/ex09/: README.md  pyproject.toml
py0/ex09/ft_package/: Count_in_list.py
py0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
py1/ex00/: give_bmi.py
py1/ex02/: load_image.py
py1/ex03/: load_image.py  zoom.py
py1/ex04/: load_image.py  rotate.py
