[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Galadou", email="gmersch@student.42angouleme.fr" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Galadou/Python4DataScience/tree/main/py0/ex09"
Issues = "https://github.com/Galadou/Python4DataScience/issues"